Migrate to Tomcat 10

--- a/gradle/settings/tomcat10.gradle
+++ b/gradle/settings/tomcat10.gradle
@@ -52,68 +52,82 @@ BuildUtils.includeModules(this.settings, rootDir, [
 //        "server/modules/DiscvrLabKeyModules",
 //        "server/modules/LabDevKitModules",
 //        "server/modules/MacCossLabModules",
-//        "server/modules/MaxQuant",
+        "server/modules/MaxQuant",
 //        "server/modules/OConnorLabModules",
-//        "server/modules/Response",
-//        "server/modules/UserReg-WS",
-//        "server/modules/accounts",
-//        "server/modules/adjudication",
+        "server/modules/Response",
+        "server/modules/UserReg-WS",
+        "server/modules/accounts",
+        "server/modules/adjudication",
         "server/modules/assayRequest",
-//        "server/modules/assayreport",
+        "server/modules/assayreport",
         "server/modules/biologics",
         "server/modules/cas",
-//        "server/modules/cdisc_ODM",
-//        "server/modules/cds",
-//        "server/modules/cloud",
+        "server/modules/cdisc_ODM",
+        "server/modules/cds",
+        "server/modules/ciml",
+        "server/modules/cloud",
         "server/modules/cloudServices",
         "server/modules/commonAssays",
-//        "server/modules/compliance",
-//        "server/modules/complianceActivities",
+        "server/modules/compliance",
+        "server/modules/complianceActivities",
 //        "server/modules/connectors",
-//        "server/modules/customModules",
-//        "server/modules/dataFinder",
+        "server/modules/customModules",
+        "server/modules/dataFinder",
         "server/modules/dataintegration",
         "server/modules/docker",
 //        "server/modules/ehrModules",
-//        "server/modules/evaluationContent",
-//        "server/modules/fileTransfer",
-//        "server/modules/freezerpro",
-//        "server/modules/harvest",
+        "server/modules/evaluationContent",
+        "server/modules/fileTransfer",
+        "server/modules/freezerpro",
+        "server/modules/harvest",
+        "server/modules/hjfSampleRequests",
         "server/modules/inventory",
+        "server/modules/itn-tslk-modules",
+//        "server/modules/johnsHopkinsEHRModules",
+        "server/modules/kitePharma",
         "server/modules/labbook",
         "server/modules/ldap",
+        "server/modules/lygos",
         "server/modules/mfa",
-//        "server/modules/moduleEditor",
-//        "server/modules/nlp",
+        "server/modules/moduleEditor",
+        "server/modules/nci",
+        "server/modules/neurimmune",
+        "server/modules/neuroscience-trc",
+        "server/modules/niaid",
+        "server/modules/niaidElisa",
+        "server/modules/nihs",
+//        "server/modules/nircEHRModules",
+        "server/modules/nlp",
 //        "server/modules/onprcEHRModules",
-//        "server/modules/ontology",
-//        "server/modules/openEMPI",
-//        "server/modules/pepdb",
+        "server/modules/ontology",
+        "server/modules/openEMPI",
+        "server/modules/pepdb",
         "server/modules/platform",
+        "server/modules/pnnl",
         "server/modules/premium",
-//        "server/modules/professional",
-//        "server/modules/provenance",
+        "server/modules/professional",
+        "server/modules/provenance",
         "server/modules/puppeteer",
-//        "server/modules/pushdownloads",
-//        "server/modules/reagent",
+        "server/modules/pushdownloads",
+        "server/modules/reagent",
         "server/modules/recipe",
-//        "server/modules/redcap",
+        "server/modules/redcap",
         "server/modules/redshift",
 //        "server/modules/rstudio",
         "server/modules/saml",
         "server/modules/sampleManagement",
-//        "server/modules/serviceTools",
+        "server/modules/serviceTools",
         "server/modules/signing",
 //        "server/modules/snd",
 //        "server/modules/snprcEHRModules",
-//        "server/modules/targetedms",
+        "server/modules/targetedms",
 //        "server/modules/tnprc_billing",
 //        "server/modules/tnprc_ehr",
-//        "server/modules/trialServices",
-//        "server/modules/trialShare",
-//        "server/modules/tutorialModules",
+        "server/modules/trialServices",
+        "server/modules/trialShare",
+        "server/modules/tutorialModules",
 //        "server/modules/wnprc-modules",
-//        "server/modules/workflow",
+        "server/modules/workflow",
 ], [], true)
 
 
