--- a/gradle/settings/tomcat10.gradle
+++ b/gradle/settings/tomcat10.gradle
@@ -47,10 +47,7 @@ buildscript {
 import org.labkey.gradle.util.BuildUtils
 
 // Remove modules from this as they are migrated to tomcat 10
-BuildUtils.includeModules(this.settings, rootDir, ["server/modules"], [
-        "BimberLabKeyModules",
-        "DiscvrLabKeyModules",
-], true)
+BuildUtils.includeModules(this.settings, rootDir, ["server/modules"], [], true)
 
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
