--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=1.44.1
+gradlePluginsVersion=1.45.0-SNAPSHOT
 owaspDependencyCheckPluginVersion=8.4.3
 versioningPluginVersion=1.1.2
 
@@ -173,7 +173,7 @@ gsonVersion=2.8.9
 
 grpcVersion=1.60.0
 
-guavaVersion=32.1.3-jre
+guavaVersion=33.0.0-jre
 gwtVersion=2.10.0
 gwtServletVersion=2.10.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
