--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-moduleSet=all
-ideaIncludeAllModules=true
+#moduleSet=all
+#ideaIncludeAllModules=true
 # This controls Gradle's file system watching, which improves efficiency of incremental builds
 # https://docs.gradle.org/current/userguide/file_system_watching.html
 org.gradle.vfs.watch=true
