Tweak spring boot properties to allow access to management endpoints

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -46,6 +46,9 @@ mail.smtpUser=@@smtpUser@@
 
 #useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
+# Make management endpoints accessible with LabKey at ROOT context path
+server.servlet.context-path=/actuator
+management.endpoints.web.base-path=/
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 # turn off other endpoints
