--- a/gradle.properties
+++ b/gradle.properties
@@ -175,7 +175,7 @@ grpcVersion=1.60.1
 
 guavaVersion=33.0.0-jre
 gwtVersion=2.10.0
-gwtServletVersion=2.11.0-jakarta-SNAPSHOT
+gwtServletVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
@@ -272,7 +272,7 @@ rforgeVersion=0.6-8.1
 # sync with Tika version
 romeVersion=1.19.0
 
-# Tomcat 9 implements 4.x
+# Tomcat 10 implements 6.x
 servletApiVersion=6.0.0
 
 # this version is forced for compatibility with pipeline and tika
