Update property name

--- a/gradle.properties
+++ b/gradle.properties
@@ -175,7 +175,7 @@ grpcVersion=1.60.1
 
 guavaVersion=33.0.0-jre
 gwtVersion=2.10.0
-gwtServletVersion=2.11.0
+gwtServletJakartaVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
