--- a/gradle.properties
+++ b/gradle.properties
@@ -103,7 +103,7 @@ apacheDirectoryVersion=2.1.3
 apacheMinaVersion=2.2.1
 
 # Keep in sync with springBootTomcatVersion below
-apacheTomcatVersion=10.1.17
+apacheTomcatVersion=10.1.18
 
 # (mothership) -> json-path -> json-smart -> accessor-smart
 # (core) -> graalvm
@@ -283,12 +283,12 @@ slf4jLog4jApiVersion=2.0.7
 # This is a dependency for HTSJDK. Force version for CVE-2023-43642
 snappyJavaVersion=1.1.10.5
 
-springBootVersion=3.1.5
-# This MUST match the Tomcat version dictated by springBootVersion
+springBootVersion=3.1.7
+# This usually matches the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
-springBootTomcatVersion=10.1.15
+springBootTomcatVersion=10.1.18
 
-springVersion=6.0.13
+springVersion=6.0.16
 
 # Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys()
 sqliteJdbcVersion=3.42.0.1
