--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=2.0.0
+gradlePluginsVersion=2.1.0
 owaspDependencyCheckPluginVersion=8.4.3
 versioningPluginVersion=1.1.2
 
@@ -103,7 +103,7 @@ apacheDirectoryVersion=2.1.3
 apacheMinaVersion=2.2.1
 
 # Keep in sync with springBootTomcatVersion below
-apacheTomcatVersion=10.1.17
+apacheTomcatVersion=10.1.18
 
 # (mothership) -> json-path -> json-smart -> accessor-smart
 # (core) -> graalvm
@@ -174,8 +174,8 @@ gsonVersion=2.8.9
 grpcVersion=1.60.1
 
 guavaVersion=33.0.0-jre
-gwtVersion=2.10.0
-gwtServletVersion=2.11.0-jakarta-SNAPSHOT
+gwtVersion=2.11.0
+gwtServletJakartaVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
@@ -272,7 +272,7 @@ rforgeVersion=0.6-8.1
 # sync with Tika version
 romeVersion=1.19.0
 
-# Tomcat 9 implements 4.x
+# Tomcat 10 implements 6.x
 servletApiVersion=6.0.0
 
 # this version is forced for compatibility with pipeline and tika
@@ -283,12 +283,12 @@ slf4jLog4jApiVersion=2.0.7
 # This is a dependency for HTSJDK. Force version for CVE-2023-43642
 snappyJavaVersion=1.1.10.5
 
-springBootVersion=3.1.5
-# This MUST match the Tomcat version dictated by springBootVersion
+springBootVersion=3.1.7
+# This usually matches the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
-springBootTomcatVersion=10.1.15
+springBootTomcatVersion=10.1.18
 
-springVersion=6.0.13
+springVersion=6.0.16
 
 # Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys()
 sqliteJdbcVersion=3.42.0.1
