Support all labkey.xml/ROOT.xml settings via application.properties

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -21,6 +21,9 @@ context.maxWaitMillis[0]=120000
 context.accessToUnderlyingConnectionAllowed[0]=true
 context.validationQuery[0]=SELECT 1
 
+#context.logQueries[0]=true
+#context.displayName[0]=Alternate Display Name
+
 #context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
 #context.driverClassName[1]=@@extraJdbcDriverClassName@@
 #context.url[1]=@@extraJdbcURL@@
@@ -33,6 +36,7 @@ context.encryptionKey=@@encryptionKey@@
 #context.requiredModules=
 #context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
+#context.bypass2FA=false
 #context.workDirLocation=/path/to/desired/workDir
 
 mail.smtpHost=@@smtpHost@@
@@ -43,6 +47,26 @@ mail.smtpUser=@@smtpUser@@
 # mail.startTlsEnable=@@smtpStartTlsEnable@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
+
+# Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
+# https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
+#jms.type=org.apache.activemq.ActiveMQConnectionFactory
+#jms.factory=org.apache.activemq.jndi.JNDIReferenceFactory
+#jms.description=JMS Connection Factory
+#jms.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
+#jms.brokerName=LocalActiveMQBroker
+
+# Optional - LDAP configuration for LDAP group/user synchronization
+# https://www.labkey.org/Documentation/wiki-page.view?name=LDAP_sync
+#ldap.type=org.labkey.premium.ldap.LdapConnectionConfigFactory
+#ldap.factory=org.labkey.premium.ldap.LdapConnectionConfigFactory
+#ldap.host=ldap.forumsys.com
+#ldap.port=389
+#ldap.principal=cn=read-only-admin,dc=example,dc=com
+#ldap.credentials=password
+#ldap.useTls=false
+#ldap.useSsl=false
+#ldap.sslProtocol=SSLv3
 
 #useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
