Support filtering of time fields for sql server

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -12,7 +12,7 @@ databaseDefaultHost=localhost
 databaseDefaultPort=1433
 
 jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;${jdbcURLParameters}
+jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;sendTimeAsDatetime=false;applicationName=LabKey Server;${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=sa
 
