Support additional context paths - for the primary deployment, for redirecting, and for secondary static content

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -32,6 +32,20 @@ context.validationQuery[0]=SELECT 1
 
 #useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
+
+# By default, we'll deploy to the root context path. However, some servers have historically used /labkey or even /cpas
+#context.contextPath=/labkey
+
+# Using a legacy context path provides backwards compatibility with old deployments. A typical use case would be to
+# deploy to the root context (the default) and configure /labkey as the legacy path. GETs will be redirected, and
+# non-GETs will be handled server-side via a servlet forward.
+#context.legacyContextPath=/labkey
+
+# Other webapps to be deployed, most commonly to deliver a set of static files. Additional
+# webapps can be specified via additional indices. docBase should point at the root of the webapp's content
+#webapps.contextPath[0]=/anotherWebapp
+#webapps.docBase[0]=/my/webapp/path
+
 #context.oldEncryptionKey=
 #context.requiredModules=
 #context.pipelineConfig=/path/to/pipeline/config/dir
