--- a/gradle.properties
+++ b/gradle.properties
@@ -291,7 +291,8 @@ springBootTomcatVersion=9.0.83
 
 springVersion=5.3.31
 
-sqliteJdbcVersion=3.45.0.0
+# Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys(), Issue 49462
+sqliteJdbcVersion=3.42.0.1
 
 # NLP and SAML bring stax2-api in as a transitive dependency but with very different versions. We force the later version.
 stax2ApiVersion=4.2.1
