--- a/settings.gradle
+++ b/settings.gradle
@@ -96,7 +96,7 @@ import org.labkey.gradle.util.BuildUtils
   node in the tree with these leaves (e.g., 'server:modules:core' will create projects for ":server"
   ":server:modules" and ":server:modules:core").
  */
-if (hasProperty("useEmbeddedTomcat"))
+if (hasProperty("useEmbeddedTomcat") && useEmbeddedTomcat != "false")
 {
     include ":server:embedded"
 }
