Add support for custom webapp resources

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -64,6 +64,14 @@ management.endpoints.web.exposure.include=*
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
 
+# Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
+# https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
+#context.resources.jms.name=jms/ConnectionFactory
+#context.resources.jms.type=org.apache.activemq.ActiveMQConnectionFactory
+#context.resources.jms.factory=org.apache.activemq.jndi.JNDIReferenceFactory
+#context.resources.jms.description=JMS Connection Factory
+#context.resources.jms.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
+#context.resources.jms.brokerName=LocalActiveMQBroker
 
 # Turn on JSON-formatted HTTP access logging to stdout. See issue 48565
 # https://tomcat.apache.org/tomcat-9.0-doc/config/valve.html#JSON_Access_Log_Valve
