No need to comment it out

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -92,8 +92,8 @@ mail.smtpUser=@@smtpUser@@
 #server.servlet.session.timeout=30m
 
 ## Make management endpoints accessible with LabKey at ROOT context path
-#setupTask#server.servlet.context-path=/actuator
-#setupTask#management.endpoints.web.base-path=/
+server.servlet.context-path=/actuator
+management.endpoints.web.base-path=/
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 # turn off other endpoints
