Tomcat 10 - Update namespace of Jakarta EE packages (#706)
Co-authored-by: labkey-jeckels <jeckels@labkey.com>
Co-authored-by: Adam Rauch <adam@labkey.com>
Co-authored-by: labkey-matthewb <matthewb@labkey.com>

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -7,8 +7,12 @@ server.port=@@serverPort@@
 #server.ssl.key-alias=my_selfsigned
 #server.ssl.key-store=/path/to/key-store-file
 #server.ssl.key-store-password=pwd
-#server.ssl.key-store-type=key-store-type
+# Typically either PKCS12 or JKS
+#server.ssl.key-store-type=PKCS12
 #server.ssl.ciphers=ciphers
+
+# HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
+#context.httpPort=8080
 
 context.dataSourceName[0]=jdbc/labkeyDataSource
 context.driverClassName[0]=@@jdbcDriverClassName@@
@@ -21,6 +25,9 @@ context.maxWaitMillis[0]=120000
 context.accessToUnderlyingConnectionAllowed[0]=true
 context.validationQuery[0]=SELECT 1
 
+#context.logQueries[0]=true
+#context.displayName[0]=Alternate Display Name
+
 #context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
 #context.driverClassName[1]=@@extraJdbcDriverClassName@@
 #context.url[1]=@@extraJdbcUrl@@
@@ -29,10 +36,25 @@ context.validationQuery[0]=SELECT 1
 
 #useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
+
+# By default, we'll deploy to the root context path. However, some servers have historically used /labkey or even /cpas
+#context.contextPath=/labkey
+
+# Using a legacy context path provides backwards compatibility with old deployments. A typical use case would be to
+# deploy to the root context (the default) and configure /labkey as the legacy path. GETs will be redirected, and
+# non-GETs will be handled server-side via a servlet forward.
+#context.legacyContextPath=/labkey
+
+# Other webapps to be deployed, most commonly to deliver a set of static files. Additional
+# webapps can be specified via additional indices. docBase should point at the root of the webapp's content
+#webapps.contextPath[0]=/anotherWebapp
+#webapps.docBase[0]=/my/webapp/path
+
 #context.oldEncryptionKey=
 #context.requiredModules=
 #context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
+#context.bypass2FA=false
 #context.workDirLocation=/path/to/desired/workDir
 
 mail.smtpHost=@@smtpHost@@
@@ -44,9 +66,32 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
+# Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
+# https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
+#jms.type=org.apache.activemq.ActiveMQConnectionFactory
+#jms.factory=org.apache.activemq.jndi.JNDIReferenceFactory
+#jms.description=JMS Connection Factory
+#jms.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
+#jms.brokerName=LocalActiveMQBroker
+
+# Optional - LDAP configuration for LDAP group/user synchronization
+# https://www.labkey.org/Documentation/wiki-page.view?name=LDAP_sync
+#ldap.type=org.labkey.premium.ldap.LdapConnectionConfigFactory
+#ldap.factory=org.labkey.premium.ldap.LdapConnectionConfigFactory
+#ldap.host=ldap.forumsys.com
+#ldap.port=389
+#ldap.principal=cn=read-only-admin,dc=example,dc=com
+#ldap.credentials=password
+#ldap.useTls=false
+#ldap.useSsl=false
+#ldap.sslProtocol=SSLv3
+
 #useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
-# Make management endpoints accessible with LabKey at ROOT context path
+# HTTP session timeout for users - defaults to 30 minutes
+#server.servlet.session.timeout=30m
+
+## Make management endpoints accessible with LabKey at ROOT context path
 server.servlet.context-path=/actuator
 management.endpoints.web.base-path=/
 #Enable shutdown endpoint
