--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.caching=true
 org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
 # (this could be memory-intensive)
-org.gradle.workers.max=3
+org.gradle.workers.max=6
 # Default to using 2GB of memory for the JVM.
 org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # Uncomment to restrict the number of concurrent npm build tasks. Useful for systems with limited resources.
@@ -91,7 +91,7 @@ npmWorkDirectory=.node
 # gradle.properties file to declare these version numbers. Naming
 # convention is <library name>Version camel-cased, i.e. "jacksonVersion".
 
-activationVersion=1.2.2
+activationVersion=2.1.2
 
 annotationsVersion=15.0
 
@@ -103,7 +103,7 @@ apacheDirectoryVersion=2.1.3
 apacheMinaVersion=2.2.1
 
 # Keep in sync with springBootTomcatVersion below
-apacheTomcatVersion=9.0.83
+apacheTomcatVersion=10.1.18
 
 # (mothership) -> json-path -> json-smart -> accessor-smart
 # (core) -> graalvm
@@ -132,7 +132,6 @@ commonsCompressVersion=1.25.0
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
-commonsFileuploadVersion=1.5
 commonsIoVersion=2.15.1
 commonsLangVersion=2.6
 commonsLang3Version=3.14.0
@@ -175,8 +174,8 @@ gsonVersion=2.8.9
 grpcVersion=1.61.0
 
 guavaVersion=33.0.0-jre
-gwtVersion=2.10.0
-gwtServletVersion=2.10.0
+gwtVersion=2.11.0
+gwtServletJakartaVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
@@ -202,7 +201,7 @@ jamaVersion=1.0.3
 
 javassistVersion=3.20.0-GA
 
-javaMailVersion=1.6.7
+javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
 # No longer part of Java 10. Dependency for many modules.
@@ -273,8 +272,8 @@ rforgeVersion=0.6-8.1
 # sync with Tika version
 romeVersion=2.1.0
 
-# Tomcat 9 implements 4.x
-servletApiVersion=4.0.1
+# Tomcat 10 implements 6.x
+servletApiVersion=6.0.0
 
 # this version is forced for compatibility with pipeline and tika
 slf4jLog4j12Version=2.0.9
@@ -284,12 +283,12 @@ slf4jLog4jApiVersion=2.0.9
 # This is a dependency for HTSJDK. Force version for CVE-2023-43642
 snappyJavaVersion=1.1.10.5
 
-springBootVersion=2.7.18
-# This MUST match the Tomcat version dictated by springBootVersion
+springBootVersion=3.2.2
+# This usually matches the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
-springBootTomcatVersion=9.0.83
+springBootTomcatVersion=10.1.18
 
-springVersion=5.3.31
+springVersion=6.1.3
 
 # Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys(), Issue 49462
 sqliteJdbcVersion=3.42.0.1
@@ -306,6 +305,7 @@ tikaVersion=2.9.1
 tukaaniXZVersion=1.9
 
 validationApiVersion=1.1.0.Final
+validationJakartaApiVersion=3.0.2
 
 # NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions. We force the later version.
 woodstoxCoreVersion=6.5.0
