Allow TeamCity to disable embedded tomcat (#695)
* Add ${CSP.REPORT.PARAMS} to sample CSP report-uri directives
* gitignore 'external' directory that might get generated

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -136,7 +136,7 @@ spring.main.banner-mode=off
 #    base-uri 'self' ;\
 #    upgrade-insecure-requests ;\
 #    frame-ancestors 'self' ;\
-#    report-uri https://www.labkey.org/admin-contentsecuritypolicyreport.api ;
+#    report-uri https://www.labkey.org/admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # example usage 2 - less strict but enforces directives, (NOTE: unsafe-inline is still required for many modules)
 
@@ -151,7 +151,7 @@ spring.main.banner-mode=off
 #    base-uri 'self' ;\
 #    upgrade-insecure-requests ;\
 #    frame-ancestors 'self' ;\
-#    report-uri  https://www.labkey.org/admin-contentsecuritypolicyreport.api ;
+#    report-uri  https://www.labkey.org/admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Default CSP for TeamCity and dev deployments
 #setupTask#csp.report=\
@@ -164,7 +164,7 @@ spring.main.banner-mode=off
 #setupTask#    script-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}' ;\
 #setupTask#    base-uri 'self' ;\
 #setupTask#    frame-ancestors 'self' ;\
-#setupTask#    report-uri /admin-contentsecuritypolicyreport.api ;
+#setupTask#    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Use a non-temp directory for tomcat
 #setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
