Embedded Tomcat support for custom webapp resources (#701)

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -66,26 +66,6 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
-# Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
-# https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
-#jms.type=org.apache.activemq.ActiveMQConnectionFactory
-#jms.factory=org.apache.activemq.jndi.JNDIReferenceFactory
-#jms.description=JMS Connection Factory
-#jms.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
-#jms.brokerName=LocalActiveMQBroker
-
-# Optional - LDAP configuration for LDAP group/user synchronization
-# https://www.labkey.org/Documentation/wiki-page.view?name=LDAP_sync
-#ldap.type=org.labkey.premium.ldap.LdapConnectionConfigFactory
-#ldap.factory=org.labkey.premium.ldap.LdapConnectionConfigFactory
-#ldap.host=ldap.forumsys.com
-#ldap.port=389
-#ldap.principal=cn=read-only-admin,dc=example,dc=com
-#ldap.credentials=password
-#ldap.useTls=false
-#ldap.useSsl=false
-#ldap.sslProtocol=SSLv3
-
 #useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
 # HTTP session timeout for users - defaults to 30 minutes
@@ -109,6 +89,14 @@ management.endpoints.web.exposure.include=*
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
 
+# Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
+# https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
+#context.resources.jms.name=jms/ConnectionFactory
+#context.resources.jms.type=org.apache.activemq.ActiveMQConnectionFactory
+#context.resources.jms.factory=org.apache.activemq.jndi.JNDIReferenceFactory
+#context.resources.jms.description=JMS Connection Factory
+#context.resources.jms.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
+#context.resources.jms.brokerName=LocalActiveMQBroker
 
 # Turn on JSON-formatted HTTP access logging to stdout. See issue 48565
 # https://tomcat.apache.org/tomcat-9.0-doc/config/valve.html#JSON_Access_Log_Valve
