Force version consistency for annotations and reflections

--- a/gradle.properties
+++ b/gradle.properties
@@ -267,6 +267,8 @@ postgresqlDriverVersion=42.7.1
 
 quartzVersion=2.3.2
 
+reflectionsVersion=0.10.2
+
 rforgeVersion=0.6-8.1
 
 # sync with Tika version
