Improve usability of application.properties

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -14,41 +14,39 @@ server.port=@@serverPort@@
 # HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 #context.httpPort=8080
 
-context.dataSourceName[0]=jdbc/labkeyDataSource
-context.driverClassName[0]=@@jdbcDriverClassName@@
-context.url[0]=@@jdbcURL@@
-context.username[0]=@@jdbcUser@@
-context.password[0]=@@jdbcPassword@@
-context.maxTotal[0]=50
-context.maxIdle[0]=10
-context.maxWaitMillis[0]=120000
-context.accessToUnderlyingConnectionAllowed[0]=true
-context.validationQuery[0]=SELECT 1
+context.resources.jdbc.labkeyDataSource.type=javax.sql.DataSource
+context.resources.jdbc.labkeyDataSource.driverClassName=@@jdbcDriverClassName@@
+context.resources.jdbc.labkeyDataSource.url=@@jdbcURL@@
+context.resources.jdbc.labkeyDataSource.username=@@jdbcUser@@
+context.resources.jdbc.labkeyDataSource.password=@@jdbcPassword@@
+context.resources.jdbc.labkeyDataSource.maxTotal=50
+context.resources.jdbc.labkeyDataSource.maxIdle=10
+context.resources.jdbc.labkeyDataSource.maxWaitMillis=120000
+context.resources.jdbc.labkeyDataSource.accessToUnderlyingConnectionAllowed=true
+context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
+#context.resources.jdbc.labkeyDataSource.logQueries=true
+#context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
-#context.logQueries[0]=true
-#context.displayName[0]=Alternate Display Name
-
-#context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
-#context.driverClassName[1]=@@extraJdbcDriverClassName@@
-#context.url[1]=@@extraJdbcUrl@@
-#context.username[1]=@@extraJdbcUsername@@
-#context.password[1]=@@extraJdbcPassword@@
+#context.resources.jdbc.otherDataSource.driverClassName=@@extraJdbcDriverClassName@@
+#context.resources.jdbc.otherDataSource.url=@@extraJdbcUrl@@
+#context.resources.jdbc.otherDataSource.username=@@extraJdbcUsername@@
+#context.resources.jdbc.otherDataSource.password=@@extraJdbcPassword@@
 
 #useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
 
-# By default, we'll deploy to the root context path. However, some servers have historically used /labkey or even /cpas
+# By default, we deploy to the root context path. However, some servers have historically used /labkey or even /cpas
 #context.contextPath=/labkey
 
 # Using a legacy context path provides backwards compatibility with old deployments. A typical use case would be to
-# deploy to the root context (the default) and configure /labkey as the legacy path. GETs will be redirected, and
-# non-GETs will be handled server-side via a servlet forward.
+# deploy to the root context (the default) and configure /labkey as the legacy path. GETs will be redirected.
+# All other methods (POSTs, PUTs, etc) will be handled server-side via a servlet forward.
 #context.legacyContextPath=/labkey
 
-# Other webapps to be deployed, most commonly to deliver a set of static files. Additional
-# webapps can be specified via additional indices. docBase should point at the root of the webapp's content
-#webapps.contextPath[0]=/anotherWebapp
-#webapps.docBase[0]=/my/webapp/path
+# Other webapps to be deployed, most commonly to deliver a set of static files. The context path to deploy into is the
+# property name after the "context.additionalWebapps." prefix, and the value is the location of the webapp on disk
+#context.additionalWebapps.firstContextPath=/my/webapp/path
+#context.additionalWebapps.secondContextPath=/my/other/webapp/path
 
 #context.oldEncryptionKey=
 #context.requiredModules=
@@ -65,6 +63,29 @@ mail.smtpUser=@@smtpUser@@
 # mail.startTlsEnable=@@smtpStartTlsEnable@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
+
+# Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
+# https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
+#context.resources.jms.ConnectionFactory.type=org.apache.activemq.ActiveMQConnectionFactory
+#context.resources.jms.ConnectionFactory.factory=org.apache.activemq.jndi.JNDIReferenceFactory
+#context.resources.jms.ConnectionFactory.description=JMS Connection Factory
+# Use an in-process ActiveMQ queue
+#context.resources.jms.ConnectionFactory.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
+# Use an out-of-process ActiveMQ queue
+#context.resources.jms.ConnectionFactory.brokerURL=tcp://localhost:61616
+#context.resources.jms.ConnectionFactory.brokerName=LocalActiveMQBroker
+
+# Optional - LDAP configuration for LDAP group/user synchronization
+# https://www.labkey.org/Documentation/wiki-page.view?name=LDAP_sync
+#context.resources.ldap.ConfigFactory.type=org.labkey.premium.ldap.LdapConnectionConfigFactory
+#context.resources.ldap.ConfigFactory.factory=org.labkey.premium.ldap.LdapConnectionConfigFactory
+#context.resources.ldap.ConfigFactory.host=ldap.forumsys.com
+#context.resources.ldap.ConfigFactory.port=389
+#context.resources.ldap.ConfigFactory.principal=cn=read-only-admin,dc=example,dc=com
+#context.resources.ldap.ConfigFactory.credentials=password
+#context.resources.ldap.ConfigFactory.useTls=false
+#context.resources.ldap.ConfigFactory.useSsl=false
+#context.resources.ldap.ConfigFactory.sslProtocol=SSLv3
 
 #useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
