--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -34,7 +34,7 @@ context.validationQuery[0]=SELECT 1
 #context.username[1]=@@extraJdbcUsername@@
 #context.password[1]=@@extraJdbcPassword@@
 
-#useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
+#useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeywebapp
 context.encryptionKey=@@encryptionKey@@
 
 # By default, we'll deploy to the root context path. However, some servers have historically used /labkey or even /cpas
@@ -66,7 +66,7 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
-#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
+#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/config
 
 # HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
@@ -155,7 +155,7 @@ spring.main.banner-mode=off
 #setupTask#    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Use a non-temp directory for tomcat
-#setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
+#setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy
 
 # Enable tomcat access log
 server.tomcat.accesslog.enabled=true
