--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.caching=true
 org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
 # (this could be memory-intensive)
-org.gradle.workers.max=6
+org.gradle.workers.max=3
 # Default to using 2GB of memory for the JVM.
 org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # Uncomment to restrict the number of concurrent npm build tasks. Useful for systems with limited resources.
@@ -22,10 +22,10 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 versionConflictAction=delete
 
 # uncomment the following line for running the application with embedded tomcat
-#useEmbeddedTomcat
+useEmbeddedTomcat
 
 # uncomment the following line when using a local build of a server with embedded tomcat
-#useLocalBuild
+useLocalBuild
 
 # uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
