--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -14,6 +14,9 @@ server.port=@@serverPort@@
 # HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 #context.httpPort=8080
 
+# Database connections. All deployments need a labkeyDataSource as their primary database. Add additional external
+# data sources by specifying the required properties (at least driverClassName, url, username, and password)
+# with a prefix of context.resources.jdbc.<dataSourceName>.
 context.resources.jdbc.labkeyDataSource.type=javax.sql.DataSource
 context.resources.jdbc.labkeyDataSource.driverClassName=@@jdbcDriverClassName@@
 context.resources.jdbc.labkeyDataSource.url=@@jdbcURL@@
@@ -31,6 +34,14 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.otherDataSource.url=@@extraJdbcUrl@@
 #context.resources.jdbc.otherDataSource.username=@@extraJdbcUsername@@
 #context.resources.jdbc.otherDataSource.password=@@extraJdbcPassword@@
+
+# Retain legacy syntax until automated tests are updated to configure via the 'context.resources.jdbc.' prefix
+#context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
+#context.driverClassName[1]=@@extraJdbcDriverClassName@@
+#context.url[1]=@@extraJdbcUrl@@
+#context.username[1]=@@extraJdbcUsername@@
+#context.password[1]=@@extraJdbcPassword@@
+
 
 #useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
