--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -30,10 +30,10 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.labkeyDataSource.logQueries=true
 #context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
-#context.resources.jdbc.otherDataSource.driverClassName=@@extraJdbcDriverClassName@@
-#context.resources.jdbc.otherDataSource.url=@@extraJdbcUrl@@
-#context.resources.jdbc.otherDataSource.username=@@extraJdbcUsername@@
-#context.resources.jdbc.otherDataSource.password=@@extraJdbcPassword@@
+#context.resources.jdbc.@@extraJdbcDataSource@@.driverClassName=@@extraJdbcDriverClassName@@
+#context.resources.jdbc.@@extraJdbcDataSource@@.url=@@extraJdbcUrl@@
+#context.resources.jdbc.@@extraJdbcDataSource@@.username=@@extraJdbcUsername@@
+#context.resources.jdbc.@@extraJdbcDataSource@@.password=@@extraJdbcPassword@@
 
 # Retain legacy syntax until automated tests are updated to configure via the 'context.resources.jdbc.' prefix
 #context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
