--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -90,10 +90,10 @@ mail.smtpUser=@@smtpUser@@
 # https://www.labkey.org/Documentation/wiki-page.view?name=LDAP_sync
 #context.resources.ldap.ConfigFactory.type=org.labkey.premium.ldap.LdapConnectionConfigFactory
 #context.resources.ldap.ConfigFactory.factory=org.labkey.premium.ldap.LdapConnectionConfigFactory
-#context.resources.ldap.ConfigFactory.host=ldap.forumsys.com
+#context.resources.ldap.ConfigFactory.host=myldap.mydomain.com
 #context.resources.ldap.ConfigFactory.port=389
-#context.resources.ldap.ConfigFactory.principal=cn=read-only-admin,dc=example,dc=com
-#context.resources.ldap.ConfigFactory.credentials=password
+#context.resources.ldap.ConfigFactory.principal=cn=read_user
+#context.resources.ldap.ConfigFactory.credentials=read_user_password
 #context.resources.ldap.ConfigFactory.useTls=false
 #context.resources.ldap.ConfigFactory.useSsl=false
 #context.resources.ldap.ConfigFactory.sslProtocol=SSLv3
