Revert some changes

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -35,7 +35,7 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.@@extraJdbcDataSource@@.username=@@extraJdbcUsername@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.password=@@extraJdbcPassword@@
 
-#useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeywebapp
+#useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
 
 # By default, we deploy to the root context path. However, some servers have historically used /labkey or even /cpas
@@ -90,7 +90,7 @@ mail.smtpUser=@@smtpUser@@
 #context.resources.ldap.ConfigFactory.useSsl=false
 #context.resources.ldap.ConfigFactory.sslProtocol=SSLv3
 
-#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/config
+#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
 # HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
@@ -179,7 +179,7 @@ spring.main.banner-mode=off
 #setupTask#    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Use a non-temp directory for tomcat
-#setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy
+#setupTask#server.tomcat.basedir=.
 
 # Enable tomcat access log
 server.tomcat.accesslog.enabled=true
