Add shutdown port

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -5,8 +5,8 @@ server.port=@@serverPort@@
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
 #server.ssl.key-alias=my_selfsigned
-#server.ssl.key-store=/path/to/key-store-file
-#server.ssl.key-store-password=pwd
+#server.ssl.key-store=${user.home}/localhost.keystore
+#server.ssl.key-store-password=changeit
 # Typically either PKCS12 or JKS
 #server.ssl.key-store-type=PKCS12
 #server.ssl.ciphers=ciphers
@@ -95,17 +95,15 @@ mail.smtpUser=@@smtpUser@@
 # HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
 
-## Make management endpoints accessible with LabKey at ROOT context path
-server.servlet.context-path=/actuator
-management.endpoints.web.base-path=/
+
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 # turn off other endpoints
 management.endpoints.enabled-by-default=false
 # allow access via http
 management.endpoints.web.exposure.include=*
-# Use a separate port for the actuator
-#management.server.port=8081
+# Use a separate port for management endpoints. Required if LabKey is using default (ROOT) context path
+management.server.port=@@shutdownPort@@
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
@@ -163,20 +161,20 @@ spring.main.banner-mode=off
 #    report-uri  https://www.labkey.org/admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Default CSP for TeamCity and dev deployments
-#setupTask#csp.report=\
-#setupTask#    default-src 'self' https: http: ;\
-#setupTask#    connect-src 'self' localhost:* ws: ${LABKEY.ALLOWED.CONNECTIONS} ;\
-#setupTask#    object-src 'none' ;\
-#setupTask#    style-src 'self' https: 'unsafe-inline' ;\
-#setupTask#    img-src 'self' https: data: ;\
-#setupTask#    font-src 'self' http: https: data: ;\
-#setupTask#    script-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}' ;\
-#setupTask#    base-uri 'self' ;\
-#setupTask#    frame-ancestors 'self' ;\
-#setupTask#    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
+csp.report=\
+    default-src 'self' https: http: ;\
+    connect-src 'self' localhost:* ws: ${LABKEY.ALLOWED.CONNECTIONS} ;\
+    object-src 'none' ;\
+    style-src 'self' https: 'unsafe-inline' ;\
+    img-src 'self' https: data: ;\
+    font-src 'self' http: https: data: ;\
+    script-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}' ;\
+    base-uri 'self' ;\
+    frame-ancestors 'self' ;\
+    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Use a non-temp directory for tomcat
-#setupTask#server.tomcat.basedir=.
+server.tomcat.basedir=.
 
 # Enable tomcat access log
 server.tomcat.accesslog.enabled=true
