Don't define unnecessary ssl properties

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -4,12 +4,12 @@ server.port=@@serverPort@@
 
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
-#server.ssl.key-alias=my_selfsigned
+##server.ssl.key-alias=my_selfsigned
 #server.ssl.key-store=/opt/teamcity-agent/localhost.keystore
 #server.ssl.key-store-password=changeit
 # Typically either PKCS12 or JKS
 #server.ssl.key-store-type=PKCS12
-#server.ssl.ciphers=ciphers
+##server.ssl.ciphers=ciphers
 
 # HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 #context.httpPort=8080
