Make the keystore alias match TeamCity

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -4,7 +4,7 @@ server.port=@@serverPort@@
 
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
-##server.ssl.key-alias=my_selfsigned
+#server.ssl.key-alias=tomcat
 #server.ssl.key-store=/opt/teamcity-agent/localhost.keystore
 #server.ssl.key-store-password=changeit
 # Typically either PKCS12 or JKS
