Update ssl properties

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -4,12 +4,13 @@ server.port=@@serverPort@@
 
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
+#server.ssl.protocol=TLS
 #server.ssl.key-alias=tomcat
-#server.ssl.key-store=/opt/teamcity-agent/localhost.keystore
-#server.ssl.key-store-password=changeit
+#server.ssl.key-store=@@keyStore@@
+#server.ssl.key-store-password=@@keyStorePassword@@
 # Typically either PKCS12 or JKS
 #server.ssl.key-store-type=PKCS12
-##server.ssl.ciphers=ciphers
+#server.ssl.ciphers=HIGH:!ADH:!EXP:!SSLv2:!SSLv3:!MEDIUM:!LOW:!NULL:!aNULL
 
 # HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 #context.httpPort=8080
