Comment out bypass2FA prop

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -56,7 +56,7 @@ context.encryptionKey=@@encryptionKey@@
 #context.requiredModules=
 #context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
-context.bypass2FA=true
+#context.bypass2FA=true
 #context.workDirLocation=/path/to/desired/workDir
 
 mail.smtpHost=@@smtpHost@@
