Make log4j2.xml available to embedded

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -108,7 +108,7 @@ management.server.port=@@shutdownPort@@
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
-logging.config=../labkeyWebapp/WEB-INF/classes/log4j2.xml
+#logging.config=path/to/alternative/log4j2.xml
 
 # Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
 # https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
