--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -28,6 +28,7 @@ configurations {
 }
 
 configurations.configureEach {
+//    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     exclude group: 'ch.qos.logback', module: 'logback-classic'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
 }
@@ -36,6 +37,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
+//    implementation "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
 
     // Force to the latest Tomcat version until Spring Boot 2.7.17 is released and we can adopt it
     implementation('org.apache.tomcat.embed:tomcat-embed-core') {
