--- a/gradle.properties
+++ b/gradle.properties
@@ -170,8 +170,9 @@ graalVersion=23.1.2
 gsonVersion=2.8.9
 
 grpcVersion=1.62.2
-
 guavaVersion=33.1.0-jre
+
+# Note: You won't find usages in the product sources; this property is used by the gradle plugin.
 gwtVersion=2.11.0
 gwtServletJakartaVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
@@ -202,9 +203,9 @@ javassistVersion=3.20.0-GA
 javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
-# No longer part of Java 10. Dependency for many modules.
-jaxbApiVersion=2.3.1
-jaxbVersion=2.3.3
+# Dependency for many modules
+jaxbApiVersion=4.0.1
+jaxbVersion=4.0.4
 
 jaxrpcVersion=1.1
 
