--- a/build.gradle
+++ b/build.gradle
@@ -67,9 +67,13 @@ allprojects {
                 driver
                 utilities
             }
-    // exclude log4j, which may come in transitively, from all configurations to avoid its potential vulnerabilities
     configurations.configureEach {
+        // exclude log4j, which may come in transitively, from all configurations to avoid potential vulnerabilities
         exclude group: "log4j", module:"log4j"
+        // exclude old jaxb, which may come in transitively
+        exclude group: "javax.xml.bind", module: "jaxb-api"
+        // exclude jakarta activation in favor of angus activation
+        exclude group: "jakarta.activation", module: "jakarta.activation-api"
     }
     configurations.driver.setDescription("Dependencies used for SqlUtils")
     configurations.utilities.setDescription("Utility binaries for use on Windows platform")
@@ -320,7 +324,8 @@ allprojects {
                     // Force consistency for dependencies from pipeline and query
                     force "org.dom4j:dom4j:${dom4jVersion}"
                     // Force consistency across pipeline, SequenceAnalysis, and query
-                    force "javax.xml.bind:jaxb-api:${jaxbApiVersion}"
+                    force "jakarta.xml.bind:jakarta.xml.bind-api:${jaxbApiVersion}"
+                    force "org.glassfish.jaxb:jaxb-runtime:${jaxbVersion}"
 
                     // Force consistency between pipeline's ActiveMQ  and cloud's jClouds dependencies
                     force "javax.annotation:javax.annotation-api:${javaxAnnotationVersion}"
