--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -59,7 +59,9 @@ mail.smtpUser=@@smtpUser@@
 #mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 #mail.smtpAuth=@@smtpAuth@@
 
-#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
+#useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules
+# Use a trigger file for smoother restart behavior
+#useLocalBuild#spring.devtools.restart.trigger-file=.restartTrigger
 
 ## HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
